--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             </button>
           </div>
           <div>
-            <h1 class="text-2xl font-semibold mb-2">Recommended Doctor</h1>
+            <h1 class="text-2xl font-semibold mb-2">Doctor dashboard</h1>
             <p class="text-gray-600 mb-8 tag">
-              Konsultasi online dengan dokter siaga kami
+              Supervise and update doctor information
             </p>
           </div>
         </div>
