--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </button>
           </div>
           <div>
-            <h1 class="text-2xl font-semibold mb-2">Doctor dashboard</h1>
+            <h1 class="text-2xl font-semibold mb-2">Doctor Dashboard</h1>
             <p class="text-gray-600 mb-8 tag">
               Supervise and update doctor information
             </p>
