--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="/style.css" rel="stylesheet" />
   </head>
   <body class="bg-gray-100">
-    <div class="flex flex-col lg:flex-row min-h-screen">
+    <div class="flex flex-col lg:flex-row max-h-screen">
       <!-- Left Section -->
       <div class="w-full lg:w-2/5 bg-white border-r-2 border-[#EBEBEB]">
         <div class="flex flex-col border-b-2 border-[#EBEBEB] items-center">
@@ -121,7 +121,7 @@
         </div>
         
           <!-- Card Section -->
-           <div class="overflow-y-auto	h-1/4		" id="main">
+           <div class="overflow-y-auto	h-3/4	 no-scrollbar" id="main">
             
           </div>
         </div>
