--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <form class="space-y-4 px-8 py-4">
           <div>
             <label class="block text-md font-medium text-lg"
-              >Doctor Name</label
+              >Doctor's Name</label
             >
             <input
               type="text"
