--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link href="/style.css" rel="stylesheet" />
+   
+    <link href='styles.css' rel='stylesheet' type='text/css' />
+
   </head>
   <body class="bg-gray-100">
     <div class="flex flex-col lg:flex-row max-h-screen">
